# tbcomp

./: .cproject  .project  CMakeLists.txt  readme.txt
app/: CMakeLists.txt
app/tbcomp/: CMakeLists.txt  bitarray.hpp  bitbuffer.hpp  decisiontree.cpp  decisiontree.hpp  dtnode.cpp  dtnode.hpp  dtxnode.cpp  posindex.cpp  posindex.hpp  predicates.cpp  predicates.hpp  repair.cpp  repair.hpp  symbolarray.cpp  tbcomp.cpp  tbutil.hpp  test.cpp  test.hpp  wdlcomp.cpp  wdlcomp.hpp  wdlnode.cpp  wdlnode.hpp
src/: bitbuffer.cpp  bitbuffer.hpp  decisiontree.cpp  decisiontree.hpp  dtnode.cpp  dtnode.hpp  dtxnode.hpp  dtznode.cpp  dtznode.hpp  huffman.cpp  huffman.hpp  permutator.cpp  permutator.hpp  posindex.cpp  posindex.hpp  predicate.cpp  predicate.hpp  predicates.hpp  repair.cpp  repair.hpp  symbolarray.cpp  symbolarray.hpp  taskrunner.hpp  tbcomp.cpp  tbutil.hpp  test.cpp  test.hpp  types.hpp  util.hpp  wdlcomp.cpp  wdlcomp.hpp  wdlnode.cpp  wdlnode.hpp  wdlpredicate.cpp  wdlpredicate.hpp
